--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: yellow;
     color: black;
-    font-size: 28px;
+    font-size: 20px;
 }
 
 h1 {
@@ -10,5 +10,9 @@ h1 {
 }
 
 div {
-
+    font-family: 'snell roundhand',cursive;
+    text-align: center;
+    color: navy;
 }
+
+
