--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
 body {
-    background-color: yellow;
+    background-color: #99ccff;
     color: black;
     font-size: 20px;
+    text-align: center;
+}
+
+.water {
+    color: navy;
+    
 }
 
 h1 {
@@ -13,6 +19,7 @@ div {
     font-family: 'snell roundhand',cursive;
     text-align: center;
     color: navy;
+    font-size: 27px;
 }
 
 
